Updates to index links and LPA dashboard links

--- a/app/views/_includes/lpa/current-appeals.html
+++ b/app/views/_includes/lpa/current-appeals.html
@@ -40,7 +40,7 @@
     rows: [
       [
         {
-          html: '<a href="/manage/appeals/v7/appeal-details?appealCode=1345301&action=&questionnaire=overdue&statement=due">1345301</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345301&action=&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">1345301</a>'
         },
         {
           html: 'Spital House, Lensfield Rd, Cambridge CB2 1ER'
@@ -63,7 +63,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v7/appeal-details?appealCode=1345264&action=&questionnaire=due&statement=due">1345264</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345264&action=&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">1345264</a>'
         },
         {
           html: 'Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT'
@@ -86,7 +86,7 @@
       ] if data['questionnaire'] != 'complete',
       [
         {
-          html: '<a href="/manage/appeals/v7/appeal-details?appealCode=1345273&action=&statement=due&questionnaire=">1345273</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345273&action=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">1345273</a>'
         },
         {
           html: '20 Bermuda Rd, Arbury, Cambridge CB4 3JX'
@@ -108,7 +108,7 @@
       ] if data['statement'] != 'complete',
       [
         {
-          html: '<a href="/manage/appeals/v7/appeal-details?appealCode=1345260&action=&statement=due">1345260</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345260&action=&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">1345260</a>'
         },
         {
           html: 'Canterbury House, Weavely, Cambridge CB2 1PT'
@@ -124,14 +124,14 @@
           format: 'numeric'
         },
         {
-          html: '<a href="/manage/questionnaire-has/v7/task-list?appealCode=1345260&action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>
+          html: '<a href="/manage/questionnaire-has/v8/task-list?appealCode=1345260&action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>
           <br><a href="/manage/statement/v1/enter-statement?appealCode=1345260&action="><span class="govuk-visually-hidden">Submit </span>Statement</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="/manage/appeals/v7/appeal-details?appealCode=1345176&action=">1345176</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345176&action=&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">1345176</a>'
         },
         {
           html: '22 London Rd, Six Mile Bottom, Newmarket CB8 0UE'
@@ -147,13 +147,14 @@
           format: 'numeric'
         },
         {
-          html: '<a href="/manage/questionnaire/v14/task-list?appealCode=1345176&action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+          html: '<a href="/manage/questionnaire-has/v8/task-list?appealCode=1345176&action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>
+          <br><a href="/manage/statement/v1/enter-statement?appealCode=1345176&action="><span class="govuk-visually-hidden">Submit </span>Statement</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="#">1345259</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345259&action=&questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=">1345259</a>'
         },
         {
           html: 'Five Trees Garden, Cambridge CB4 1UA'
@@ -175,7 +176,7 @@
       ] if data['final-comments'] != 'complete',
       [
         {
-          html: '<a href="#">1345172</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345172&action=&questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=">1345172</a>'
         },
         {
           html: '64 Rene Court, Coldham’s Rd, Cambridge CB1 3EW'
@@ -197,7 +198,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v7/appeal-details?appealCode=1345264&action=&statement=due">1345264</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345264&action=&statement=due">1345264</a>'
         },
         {
           html: 'Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT'
@@ -220,7 +221,7 @@
 
       [
         {
-          html: '<a href="#">1345172</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345098&action=&questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">1345098</a>'
         },
         {
           html: 'The Old Library, 2 Wheeler St, Cambridge CB2 3QB'
@@ -241,7 +242,7 @@
       ],
       [
         {
-          html: '<a href="#">1345172</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345171&action=&questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">1345171</a>'
         },
         {
           html: 'Unnamed Road, Cambridge CB2 1PZ'
