--- a/app/views/index.html
+++ b/app/views/index.html
@@ -195,22 +195,38 @@
       </h2>
 
       <ul class="govuk-list govuk-list--bullet">
-
         <li>
           <a href="/interested/" class="govuk-link govuk-link--no-visited-state">Comment on a planning appeal (summary of progress)</a>
         </li>
-        <br>
+      </ul>
+
+      <h3 class="govuk-heading-s">
+        Accessing the service
+      </h3>
+
+      <ul class="govuk-list govuk-list--bullet">
         <li>
           <a href="interested/find-appeal/v8/appeal-notice-email-full">Notice of an appeal from LPA</a>
         </li>
         <li>
           <a href="interested/find-appeal/v8/guidance">Guidance: Comment on a planning appeal</a>
         </li>
+      </ul>
+      <h3 class="govuk-heading-s">
+        Finding an appeal
+      </h3>
+      <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="interested/find-appeal/v9/appeal-search-address">Find an appeal</a>
+          <a href="interested/find-appeal/v9/appeal-search-address">Appeal search</a>
+        </li>
+        <li>
+          <a href="interested/find-appeal/v9/open-appeals?address=postcode">Search results (postcode)</a>
         </li>
         <li>
           <a href="interested/find-appeal/v9/appeal-search-no-results?search=postcode">No results (postcode)</a>
+        </li>
+        <li>
+          <a href="interested/find-appeal/v9/open-appeals?address=grid">Search results (grid reference)</a>
         </li>
         <li>
           <a href="interested/find-appeal/v9/appeal-search-no-results?search=grid">No results (grid reference)</a>
@@ -218,19 +234,23 @@
         <li>
           <a href="interested/find-appeal/v9/appeal-search-no-results?search=number">No results (appeal reference)</a>
         </li>
-        <li>
-          <a href="interested/comment/v9/your-name">Comment on an appeal</a>
-        </li>
       </ul>
-
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Appeal states
+      <h3 class="govuk-heading-s">
+        Commenting on an appeal
       </h3>
-
       <ul class="govuk-list govuk-list--bullet">
         <li>
           <a href="interested/find-appeal/v8/appeal-details?status=open&appeal=1&appealCode=012726">Appeal open for comments</a>
         </li>
+        <li>
+          <a href="interested/comment/v8/your-name">Comment on an appeal</a>
+        </li>
+      </ul>
+
+      <h3 class="govuk-heading-s">
+        Closed for comment
+      </h3>
+      <ul class="govuk-list govuk-list--bullet">
         <li>
           <a href="interested/find-appeal/v8/appeal-details?status=closed&appeal=1&appealCode=011362">Appeal closed for comments</a>
         </li>
