--- a/app/views/manage/appeals/v8/appeal-details.html
+++ b/app/views/manage/appeals/v8/appeal-details.html
@@ -270,3 +270,7 @@
 </div>
 
 {% endblock %}
+
+<!-- 
+The local planning authority did not submit a statement.
+The local planning authority did not submit any final comments. -->
