IP service appeal details alignment

--- a/app/views/_includes/interested/decided-appeals.html
+++ b/app/views/_includes/interested/decided-appeals.html
@@ -27,7 +27,7 @@
   rows: [
     [
       {
-        html: "<a href='' class='govuk-link'>0201624</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0201624' class='govuk-link'>0201624</a>"
       },
       {
         html: '102 Aubrey Road, BS3 3EX'
@@ -44,7 +44,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0201972</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0201972' class='govuk-link'>0201972</a>"
       },
       {
         html: '77 Aubrey Road, BS3 3EX'
@@ -61,7 +61,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0202120</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0202120' class='govuk-link'>0202120</a>"
       },
       {
         html: '361633, 174493'
@@ -78,7 +78,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0202331</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0202331' class='govuk-link'>0202331</a>"
       },
       {
         html: '2 Aubrey House, Aubrey Road, BS3 3EX'
@@ -95,7 +95,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0212006</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0212006' class='govuk-link'>0212006</a>"
       },
       {
         html: '19 Aubrey Road, BS3 3EX'
@@ -112,7 +112,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0217634</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0217634' class='govuk-link'>0217634</a>"
       },
       {
         html: '1 Aubrey House, Aubrey Road, BS3 3EX'
@@ -129,7 +129,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0217801</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0217801' class='govuk-link'>0217801</a>"
       },
       {
         html: '22 Aubrey Road, BS3 3EX'
@@ -146,7 +146,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0219924</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0219924' class='govuk-link'>0219924</a>"
       },
       {
         html: '155 Aubrey Road, BS3 3EX'
@@ -163,7 +163,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0219983</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0219983' class='govuk-link'>0219983</a>"
       },
       {
         html: '32 Vicarage Court, Aubrey Road, BS3 3EX'
@@ -180,7 +180,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0220012</a>"
+        html: "<a href='/interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=0220012' class='govuk-link'>0220012</a>"
       },
       {
         html: '8 Aubrey Road, BS3 3EX'
