--- a/app/views/manage/appeals/v8/appeal-details.html
+++ b/app/views/manage/appeals/v8/appeal-details.html
@@ -38,11 +38,10 @@
   ]
 %}
 
-{% block beforeContent %}
-
+{% block back %}
   {{ govukBackLink({
     text: "Back to appeals",
-    href: "/manage/appeals/v7/?action="
+    href: "/manage/appeals/v8/?action="
   }) }}
 {% endblock %}
 
@@ -271,6 +270,6 @@
 
 {% endblock %}
 
-<!-- 
+<!--
 The local planning authority did not submit a statement.
 The local planning authority did not submit any final comments. -->
