--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,6 +3,7 @@
 {% set beta = false %}
 {% set back = false %}
 {% set nav = false %}
+
 {% set title = 'Appeal service prototypes' %}
 
 {% block content %}
@@ -252,10 +253,13 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="interested/find-appeal/v8/appeal-details?status=closed&appeal=1&appealCode=011362">Appeal closed for comments</a>
+          <a href="interested/find-appeal/v9/appeal-details?status=closed&appeal=1&appealCode=011362">Appeal closed for comments</a>
         </li>
         <li>
-          <a href="interested/find-appeal/v8/appeal-details?status=completed&appeal=1&appealCode=010234">Decided appeal</a>
+          <a href="interested/find-appeal/v9/closed-appeals?status=completed&appeal=1&appealCode=010234">Decided appeals</a>
+        </li>
+        <li>
+          <a href="interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=010234">Decided appeal</a>
         </li>
       </ul>
 
