Content updates for LPA

--- a/app/views/_includes/sensitive-information-list.html
+++ b/app/views/_includes/sensitive-information-list.html
@@ -1,24 +1,27 @@
 {% set sensitiveHTML %}
-	<p class="govuk-!-margin-bottom-2">Sensitive information refers to:</p>
-	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+	<p class="govuk-!-margin-bottom-2">
+		Sensitive information includes:
+	</p>
+	<ul class="govuk-list govuk-list--bullet">
 		<li>comments from children</li>
 		<li>information relating to children</li>
 		<li>information relating to health</li>
 		<li>information relating to crime</li>
-		<li>
-			any information relating to an individual&rsquo;s:
-			<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
-				<li>race</li>
-				<li>ethnic origin</li>
-				<li>politics</li>
-				<li>religion</li>
-				<li>trade union membership</li>
-				<li>genetics</li>
-				<li>physical characteristics</li>
-				<li>sex life</li>
-				<li>sexual orientation</li>
-			</ul>
-		</li>
+	</ul>
+
+	<p class="govuk-!-margin-bottom-2">
+		It also includes information about an individual’s:
+	</p>
+	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+		<li>race</li>
+		<li>ethnic origin</li>
+		<li>politics</li>
+		<li>religion</li>
+		<li>trade union membership</li>
+		<li>genetics</li>
+		<li>physical characteristics</li>
+		<li>sex life</li>
+		<li>sexual orientation</li>
 	</ul>
 {% endset -%}
 
