--- a/app/views/index.html
+++ b/app/views/index.html
@@ -102,7 +102,7 @@
         </li>
         <li>
           <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
-            Questionnaire done
+            Questionnaire valid, statement due
           </a>
         </li>
         <li>
@@ -135,7 +135,6 @@
             Appeal decided
           </a>
         </li>
-
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
@@ -155,7 +154,24 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="manage/appeals/?questionnaire=&statement=&finalcomments=">Planning appeals (list of appeals)</a>
+          <a href="manage/appeals/?questionnaire-banner=&statement-banner=&questionnaire=&statement=&finalcomments=">
+            Planning appeals (summary of progress)
+          </a>
+        </li>
+        <li>
+          <a href="manage/appeals/v8/?questionnaire-banner=&statement-banner=&questionnaire=&statement=&finalcomments=">
+            Planning appeals (list of appeals)
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+            Appeals list, questionnaire done
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+            Appeals list, statement done
+          </a>
         </li>
         <li>
           <a href="manage/manage-users/">Manage users</a>
@@ -210,7 +226,7 @@
           <a href="interested/find-appeal/v8/appeal-notice-email-full">Notice of an appeal from LPA</a>
         </li>
         <li>
-          <a href="interested/find-appeal/v8/guidance">Guidance: Comment on a planning appeal</a>
+          <a href="interested/find-appeal/v9/guidance">Guidance: Comment on a planning appeal</a>
         </li>
       </ul>
       <h3 class="govuk-heading-s">
@@ -218,7 +234,7 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="interested/find-appeal/v9/appeal-search-address">Appeal search</a>
+          <a href="interested/find-appeal/v9/appeal-search-number">Appeal search</a>
         </li>
         <li>
           <a href="interested/find-appeal/v9/open-appeals?address=postcode">Search results (postcode)</a>
