--- a/app/views/interested/find-appeal/v9/appeal-details.html
+++ b/app/views/interested/find-appeal/v9/appeal-details.html
@@ -24,7 +24,7 @@
       {% elseif data['status'] == "closed" %}
         Appeal closed for comment
       {% else %}
-        Appeal decided
+        Decision for appeal 123456
       {% endif %}
     </h1>
 
