--- a/app/views/interested/find-appeal/v9/closed-appeals.html
+++ b/app/views/interested/find-appeal/v9/closed-appeals.html
@@ -27,9 +27,9 @@
 
     <h1 class="govuk-heading-l">
       {% if data['postcode'] %}
-        33 decided   appeals found for {{ data['postcode'] }}
+        33 decided appeals found {{ data['postcode'] }}
       {% else %}
-        33 decided   appeals found for BS3 3EX
+        33 decided appeals found BS3 3EX
       {% endif %}
     </h1>
 
