--- a/app/views/interested/index.html
+++ b/app/views/interested/index.html
@@ -41,6 +41,9 @@
 
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        find appeal defaults to reference number
+      </li>
+      <li>
         content updates
       </li>
       <li>
