--- a/app/views/manage/appeals/v8/submission-full.html
+++ b/app/views/manage/appeals/v8/submission-full.html
@@ -18,7 +18,7 @@
       Appeal {{ data['appealCode'] or '1345264' }}
     </span>
     <h1 class="govuk-heading-l">
-      Appeal submission
+      Appeal details
     </h1>
 
   </div>
