--- a/app/views/manage/final-comments/index.html
+++ b/app/views/manage/final-comments/index.html
@@ -46,6 +46,9 @@
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        content updates
+      </li>
+      <li>
         removing document upload
       </li>
     </ul>
