--- a/app/views/manage/appeals/v8/appeal-details.html
+++ b/app/views/manage/appeals/v8/appeal-details.html
@@ -174,12 +174,12 @@
   <div class="govuk-grid-column-two-thirds">
 
     <h2 class="govuk-heading-m">
-      Appeal submission
+      Appeal details
     </h2>
 
     <p class="govuk-body">
       <a href="submission-full">
-        View appeal submission
+        View appeal details
       </a>
     </p>
 
@@ -256,7 +256,7 @@
       {% if data['appellant-final-comments'] == 'complete' %}
         <p class="govuk-body">
           <a href="appellant-final-comments">
-            View appellant final-comments
+            View appellant final comments
           </a>
         </p>
       {% endif %}
