--- a/app/views/manage/appeals/v8/index.html
+++ b/app/views/manage/appeals/v8/index.html
@@ -26,7 +26,7 @@
 
 {% set back = false %}
 
-{% set title = 'Manage appeals' %}
+{% set title = 'Manage your appeals' %}
 
 {% block content %}
   <div class="govuk-grid-row">
@@ -56,7 +56,7 @@
             Statement complete
           </h3>
           <p class="govuk-body">
-            Statement for appeal {{ data['appealCode']}} has been <a href="?statement-banner=&statement=complete&submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
+            You’ve <a href="?statement-banner=&statement=complete&submitted-appeals=yes#submitted-appeals" class="govuk-link">submitted your statement</a> for appeal {{ data['appealCode'] or '0123456' }}.
           </p>
         {% endset %}
 
@@ -117,7 +117,7 @@
       {{ govukTabs({
         items: [
           {
-            label: "My appeals",
+            label: "Your appeals",
             id: "new-appeals",
             panel: {
               html: currentAppeals
