Update to final comments due link on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -111,7 +111,7 @@
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&appellant-final-comments=due&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=due&evidence=&appeal-decided=">
             All statements done / final comments due
           </a>
         </li>
